feat: extended feature explaination

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -15,6 +15,55 @@
   <section class="features">
     <h2>Everything You'll Ever Need</h2>
     <p>OBMS provides a solid foundation for managing digital businesses, with essential features like finance tracking, order and payment automation, as well as customer relationship tools. Built on open-source technologies, it's fully customizable, allowing you to extend or adapt it as needed. Whether you want to tweak existing functionality or add new capabilities, OBMS is flexible enough to grow with your business while offering everything you need to operate efficiently out of the box.</p>
+    <div class="features-list">
+      <div class="features-list-item">
+        <i class="bi bi-people"></i>
+        <h3>Shop</h3>
+        <p>Sell digital products seamlessly with instant provisioning, automated delivery, and secure payments.</p>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-person-circle"></i>
+        <h3>Customer Portal</h3>
+        <p>Give customers easy access to orders, invoices, and support in one convenient dashboard.</p>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-headset"></i>
+        <h3>Helpdesk</h3>
+        <p>Manage support tickets efficiently with automated workflows and a built-in knowledge base.</p>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-credit-card"></i>
+        <h3>Billing Automation</h3>
+        <p>Generate invoices, process payments, and handle subscriptions automatically.</p>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-gear"></i>
+        <h3>Admin Portal</h3>
+        <p>Manage users, orders, and settings all in one place with an easy-to-use admin dashboard.</p>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-pie-chart"></i>
+        <h3>Statistics</h3>
+        <p>Track key metrics with real-time reports and insightful analytics.</p>
+      </div>
+      <div class="features-list-item">
+        <div>
+          <i class="bi bi-brush"></i>
+          <h3>Themes</h3>
+          <p>Customize the look and feel with flexible themes that match your brand.</p>
+        </div>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-code-square"></i>
+        <h3>Modules</h3>
+        <p>Extend functionality with powerful modules tailored to your needs.</p>
+      </div>
+      <div class="features-list-item">
+        <i class="bi bi-layers"></i>
+        <h3>Multi-Tenancy</h3>
+        <p>Support multiple businesses or clients with isolated environments and custom settings for each.</p>
+      </div>
+    </div>
     <a href="/docs/getting-started/prerequisites/" class="btn">Install Now</a>
   </section>
   <section class="technology">
