feat: landingpage functionality teaser

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -5,11 +5,20 @@
 {% block content %}
   <section class="hero">
     <div class="hero-headline">
-      <h1>Transform Your Digital Business with OBMS</h1>
+      <div>
+        <h1>Transform Your Digital Business with OBMS</h1>
+      </div>
+      <ul>
+        <li><span>Comprehensive ERP Functionality</span></li>
+        <li><span>Advanced Process Automation</span></li>
+        <li><span>Free and Open-Source</span></li>
+      </ul>
     </div>
     <div class="hero-subheadline">
-      <h2>Streamline operations, automate workflows, and manage digital products with our open-source ERP solution.</h2><br>
-      <a href="/docs/about/" class="btn">Learn More</a>
+      <h2>Streamline operations, automate workflows, and manage digital products with our open-source ERP solution.</h2>
+      <div>
+        <a href="/docs/about/" class="btn">Learn More</a>
+      </div>
     </div>
   </section>
   <section class="features">
