--- a/overrides/home.html
+++ b/overrides/home.html
@@ -75,6 +75,28 @@
     </div>
     <a href="/docs/getting-started/prerequisites/" class="btn">Install Now</a>
   </section>
+  <section class="compliance">
+    <h2>Made to Be Compliant</h2>
+    <p>OBMS is built to help businesses stay compliant with data protection, financial, and security regulations. Whether handling customer data, managing transactions, or generating legally valid invoices, our platform ensures you meet essential requirements without extra hassle. With built-in support for GDPR, e-invoicing, and national financial regulations, OBMS provides a secure and transparent foundation for your business.</p>
+    <div class="compliance-list">
+      <div class="compliance-list-item">
+        <i class="bi bi-shield-lock"></i>
+        <h3>GDPR & Data Protection</h3>
+        <p>OBMS supports GDPR with consent management, data export, and deletion requests. Encryption and access controls keep user data secure.</p>
+      </div>
+      <div class="compliance-list-item">
+        <i class="bi bi-file-earmark-text"></i>
+        <h3>e-Invoicing</h3>
+        <p>Generate legally compliant invoices in structured formats like XRechnung, ensuring smooth transactions with public authorities and enterprises.</p>
+      </div>
+      <div class="compliance-list-item">
+        <i class="bi bi-fingerprint"></i>
+        <h3>Security & Audit Trails</h3>
+        <p>Advanced encryption, role-based access, and audit logs ensure data security and regulatory transparency.</p>
+      </div>
+    </div>
+    <a href="/docs/about/" class="btn">Read the Documentation</a>
+  </section>
   <section class="technology">
     <h2>Build with ❤️ and Open-Source</h2>
     <p>OBMS is powered by a range of trusted open-source technologies, ensuring stability, security, and flexibility. By leveraging tools like Laravel, Vue.js, Bootstrap, and MySQL, OBMS combines the best of the open-source community to deliver a robust, scalable platform. This approach not only provides reliability but also allows you to tap into a wide range of customizations, making it easier to tailor the system to your specific business needs.</p>
